--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">WaterDeliveryApp</string>
     <string name="basket_name">Basket</string>
+    <string name="plus_text">＋</string>
+    <string name="order_text">Order</string>
 </resources>
