--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,17 @@
 <resources>
     <string name="app_name">WaterDeliveryApp</string>
     <string name="basket_name">Basket</string>
-    <string name="plus_text">＋</string>
+    <string name="add">＋</string>
     <string name="order_text">Order</string>
+    <string name="choice_good">Choice Good</string>
+    <string name="count">Count</string>
+    <string name="plus">+</string>
+    <string name="minus">-</string>
+    <string name="confirm">Confirm</string>
+
+    <string-array name="goods">
+        <item>Water</item>
+        <item>Juice</item>
+        <item>Cola</item>
+    </string-array>
 </resources>
